-Add Destination Detail Component page -Fix loading bar animation not showing

--- a/src/App.css
+++ b/src/App.css
@@ -32,24 +32,24 @@ a {
   to { transform: rotate(360deg); }
 }
 
-.loadingAnimation {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.laodingContainer {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
-  background: #058c9b;
-}
-
-.loadingTitle {
+.loadingContainer {
+  height: 1920px;
+  width: 1080px;
+  display: grid;
+  grid-template-columns: 1fr 500px 1fr;
+  grid-template-rows: 1fr 500px 1fr;
+  background-color: #058c9b;
   text-align: center;
-  padding-top: 30%;
   color: white;
+  font-size: 60px;
+  letter-spacing: 10px;
+}
+
+.loading {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+  &--title {
+      padding: 0;
+      margin: 0;
+  }
 }
